# rowSpanPureScriptJs

./: .gitignore  README.md
hs/: rowSpan.cabal  run.sh
hs/app/: Main.hs
js/: .babelrc  runBabelAndWatch.sh  setupBabel.sh
js/demo/: collapseTableArray.js  collapseTableArray.js.map  demo.css  demo.js  demo.js.map  index.html
js/demo/babel/: collapseTableArray.js  demo.js
ps/: bower.json
ps/src/: Counter.purs  Demo.purs  Layout.purs  Tables.purs
ps/static/: app.css
ps/support/: index.html
